<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:id="@+id/rl_login"
    tools:ignore="InvalidId">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/iv_logo_blanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_blanco"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo_blanco"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:id="@+id/ll_edittexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/white_border"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/transparent"
                android:hint="@string/putEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:fontFamily="sans-serif-light"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white">
            </LinearLayout>
            <EditText
                android:id="@+id/et_contrasena"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/transparent"
                android:hint="@string/putContrasena"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:fontFamily="sans-serif-light"
                android:textSize="16dp" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_olvidaste_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_ingresa"
            android:layout_centerHorizontal="true"
            android:text="@string/olvidaste_contrasena"
            android:textColor="@color/white"
            android:background="@color/transparent"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="-10dp"
            android:textSize="12sp"
            />
        <Button
            android:id="@+id/bt_ingresa"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/ll_edittexts"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/ripple"
            android:text="@string/ingresa"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


        <Button
            android:id="@+id/bt_registrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registrate"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:background="@color/transparent"/>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressbar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>