<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ForgotPasswordFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>
    <ImageView
        android:id="@+id/iv_logo_blanco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginLeft="110dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_blanco"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingTop="80dp">

        <TextView
            android:id="@+id/tv_recuperacion_contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recuperacion_contrasena"
            android:textAlignment="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:fontFamily="sans-serif-light"
            android:textSize="16dp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_ingrese_cta_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/mensaje_ingrese_cta_mail"
            android:textAlignment="center"
            android:fontFamily="sans-serif-light"
            android:textSize="16dp"

            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/ll_edittexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_border"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_cta_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:background="@color/transparent"
                android:hint="@string/putEmail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18dp" />

        </LinearLayout>
        <Button
            android:id="@+id/bt_recuperar_contrasena"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/ll_edittexts"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/ripple"
            android:textAllCaps="false"
            android:text="@string/recuperar_contrasena"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>/>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>